force-app/main/default/objects/Contact/fields/Allergies__c.field-meta.xml
<CustomField>
    <fullName>Allergies__c</fullName>
    <description>Known allergies for the contact (e.g., Penicillin, Peanuts).</description>
    <inlineHelpText>Specify any known allergies.</inlineHelpText>
    <label>Allergies</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>