force-app/main/default/objects/Contact/fields/Emergency_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Name__c</fullName>
    <description>Name of the designated emergency contact person.</description>
    <inlineHelpText>Enter the full name of the emergency contact.</inlineHelpText>
    <label>Emergency Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>