force-app/main/default/objects/Contact/fields/Medical_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Medical_Conditions__c</fullName>
    <description>Known medical conditions of the contact (e.g., Diabetes, Asthma).</description>
    <inlineHelpText>Specify any known medical conditions.</inlineHelpText>
    <label>Medical Conditions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>