force-app/main/default/objects/Contact/fields/Portal_Active__c.field-meta.xml
<CustomField>
    <fullName>Portal_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the contact has active access to the experience cloud portal.</description>
    <inlineHelpText>Indicates whether the contact has active access to the experience cloud portal.</inlineHelpText>
    <label>Portal Active</label>
    <type>Checkbox</type>
</CustomField>